tests/snapshots/parser_tests__err_type_errors.diag.snap
---
source: tests/parser_tests.rs
expression: error_msg
---
● E2000: Parse Error
────────────────────────────────────────────────────────────
  → <input>:7:5

     7 │
       │ = 42
       │ ^^^
       │

  ⓘ Expected expression
────────────────────────────────────────────────────────────
